--- a/Lesson3HW2/app/src/main/res/layout/activity_main.xml
+++ b/Lesson3HW2/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,12 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <!-- strings.xml!!!!!!!! -->
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/settings"
-            android:text="Settings"
+            android:text="@string/action_settings"
             android:textColor="#000000"
             android:textSize="30dp"
             android:clickable="false" />
