--- a/Lesson3HW2/app/src/main/res/layout/fragment_main.xml
+++ b/Lesson3HW2/app/src/main/res/layout/fragment_main.xml
@@ -9,10 +9,11 @@
     tools:context="bill.lesson3hw.MainActivityFragment"
     tools:showIn="@layout/content_main">
 
+    <!-- strings.xml!!!!! -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="To Do:"
+        android:text="@string/todo_title"
         android:id="@+id/textView" />
 
     <TextView
@@ -65,9 +66,4 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="250dp" />
-
-
-
-
-
-    </RelativeLayout>
+</RelativeLayout>
